--- a/index.html
+++ b/index.html
@@ -36,7 +36,16 @@
 <script src="js/main.js"></script>
 <script src="js/bootstrap.min.js"></script>
 <!-- google analytics start -->
+<script>
+  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+  (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+  m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+  })(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
 
+  ga('create', 'UA-87994924-1', 'auto');
+  ga('send', 'pageview');
+
+</script>
 <!-- google analytics end  -->
 </body>
 </html>
