--- a/index.html
+++ b/index.html
@@ -6,6 +6,13 @@
   <title>Are You Feeling Low?</title>
   <meta name="description" content="Having a rough day? Got a free compliment for you!">
   <meta name="viewport" content="width=device-width, initial-scale=1">
+  <!-- icon -->
+  <link rel="apple-touch-icon" sizes="180x180" href="assets/apple-touch-icon.png">
+  <link rel="icon" type="image/png" href="assets/favicon-32x32.png" sizes="32x32">
+  <link rel="icon" type="image/png" href="assets/favicon-16x16.png" sizes="16x16">
+  <link rel="manifest" href="assets/manifest.json">
+  <link rel="mask-icon" href="assets/safari-pinned-tab.svg" color="#E7235E">
+  <meta name="theme-color" content="#ffffff">
   <!-- css -->
   <link rel="stylesheet" href="css/bootstrap.min.css">
   <link rel="stylesheet" href="css/font-awesome.min.css">
