Changed emoji to img
Applied media queries

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
         <h1>Are you feeling low?</h1>
       </div>
       <div class="compliment-zone">
-        <div class="get-compliment">😘</div>
+        <div class="get-compliment"><img class="emoji" src="assets/get-a-kiss.png"></div>
         <p id="compliment"></p>
       </div>
     </div>
